# MPI-Sort

./: CMakeLists.txt  README.md  main.cpp
